--- a/pymakr.conf
+++ b/pymakr.conf
@@ -10,6 +10,7 @@
     "env",
     "venv"
   ],
+  "reportShadowedImports": false,
   "fast_upload": false,
   "sync_file_types": "py,txt,log,json,xml,html,js,css,mpy"
 }
